--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 100px;
 }
 
 @media (max-width: 992px) {
@@ -653,7 +653,7 @@ section {
 # Why Us
 --------------------------------------------------------------*/
 .why-us .content {
-  padding: 30px;
+  padding: 25px;
   background: #f38634;
   border-radius: 4px;
   color: #fff;
@@ -667,6 +667,8 @@ section {
 
 .why-us .content p {
   margin-bottom: 30px;
+  line-height: 40px;
+  font-size: 20px;
 }
 
 .why-us .content .more-btn {
@@ -707,12 +709,12 @@ section {
 .why-us .icon-boxes .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
-  margin: 0 0 30px 0;
+  margin: 0 0 35px 0;
 }
 
 .why-us .icon-boxes .icon-box p {
   font-size: 15px;
-  color: #848484;
+  color: #000;
 }
 
 /*--------------------------------------------------------------
@@ -1129,6 +1131,7 @@ section {
   font-size: 15px;
   line-height: 28px;
   margin-bottom: 0;
+  text-align: left;
 }
 
 .services .icon-box-pink .icon {
